# when-release-movie-

./: .gitignore  README.md
scraper/: README.md  publish.sh  pyproject.toml
scraper/data/: film_tags.json  legs.json  weekly.json  weekly_indie.json  weekly_industry.json
scraper/marquee/: cli.py  config.py  db.py  fetch.py  models.py  util.py
scraper/marquee/analysis/: derive_runs.py  holdovers.py  legs.py  snapshots.py  sources.py  tag_vocab.py  weekly.py
scraper/marquee/jobs/: backfill.py  enrich.py  enrich_forward.py  refresh.py  scrape_bom_films.py  scrape_bom_weekends.py  tag_films.py
scraper/marquee/parsers/: box_office_mojo.py  omdb.py  the_numbers.py  tmdb.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/backtest/: page.tsx
web/app/calendar/: page.tsx
web/app/compare/: page.tsx
web/app/film/: page.tsx
web/app/film-profile/: page.tsx
web/components/: BacktestChart.tsx  Calendar.tsx  CandidateBar.tsx  ColorScaleLegend.tsx  Compare.tsx  CongestionGraph.tsx  EditableChips.tsx  FilmForm.tsx  FilmModal.tsx  FilmProfile.tsx  FilmSelector.tsx  FreshnessBadge.tsx  Heatmap.tsx  Hint.tsx  WeekendGrid.tsx  WeightSliders.tsx
web/components/wireframe/: MovieModal.tsx  Radar.tsx  insights.tsx  useModel.ts
web/lib/: compare-selection.tsx  distributors.ts  film-context.tsx  film-store.ts  format.ts  holdovers.ts  scenario.ts  types.ts  wireframe-data.ts  wireframe-deps.ts
web/lib/backtest/: run.ts
web/lib/data/: load.ts
web/lib/scoring/: comparable.ts  presets.ts  score-client.ts  similarity.ts  (+1 more)
(+7 files in other folders)
