[project]
name = "marquee-scraper"
version = "0.1.0"
description = "Box Office Mojo + The Numbers ingestion for Marquee"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "tenacity>=9.0",
    "click>=8.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.9",
    "rapidfuzz>=3.10",
    "holidays>=0.58",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "ipython>=8.27",
]

[project.scripts]
marquee = "marquee.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marquee"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
